@@ -15,6 +15,7 @@
     - ":" is not filtered from the BibTeX keys any more (patch 3582376 by Oscar Gustafsson)
     - Changed internal look&feel setting (based on patch 3580605)
     - Custom importers nested in jars should be supported now (bug 3582838)
+    - PDFContentImporter uses the DOI fetcher to fetch the BibTeX for the entry (if a DOI exists at the first page).
 2.9 beta
     - Replaced notification dialog after moving/renaming linked file by status message.
     - Replaced dialog warnings about empty/duplicate key in entry editor by status line messages,
